--- a/Code/ASL/VGG11.ipynb
+++ b/Code/ASL/VGG11.ipynb
@@ -66,7 +66,7 @@
     {
      "data": {
       "text/plain": [
-       "device(type='cuda')"
+       "device(type='cpu')"
       ]
      },
      "execution_count": 3,
@@ -88,13 +88,15 @@
    "source": [
     "class ImageClassificationBase(nn.Module):\n",
     "    def training_step(self, batch):\n",
-    "        images, labels = batch \n",
+    "        images, labels = batch\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
     "        out = self(images)                  # Generate predictions\n",
     "        loss = F.cross_entropy(out, labels) # Calculate loss\n",
     "        return loss\n",
     "    \n",
     "    def validation_step(self, batch):\n",
-    "        images, labels = batch \n",
+    "        images, labels = batch\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
     "        out = self(images)                    # Generate predictions\n",
     "        loss = F.cross_entropy(out, labels)   # Calculate loss\n",
     "        acc = accuracy(out, labels)           # Calculate accuracy\n",
