Fix for RuntimeError and other errors of BSL training file.
Changed input image sizes from 32x32 to 64x64.
Fixed CNN model to correct output of 59 classes of BSL.
Added fix for CUDA RuntimeError.

--- a/Code/BSL/BSL Test 1.ipynb
+++ b/Code/BSL/BSL Test 1.ipynb
@@ -55,7 +55,7 @@
     "transform = tt.Compose(\n",
     "    [\n",
     "        tt.CenterCrop(1200),\n",
-    "        tt.Resize(32),\n",
+    "        tt.Resize(64),\n",
     "        tt.ToTensor(),\n",
     "        tt.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
     "    ]\n",
@@ -398,13 +398,15 @@
    "source": [
     "class ImageClassificationBase(nn.Module):\n",
     "    def training_step(self, batch):\n",
-    "        images, labels = batch \n",
+    "        images, labels = batch\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
     "        out = self(images)                  # Generate predictions\n",
     "        loss = F.cross_entropy(out, labels) # Calculate loss\n",
     "        return loss\n",
     "    \n",
     "    def validation_step(self, batch):\n",
-    "        images, labels = batch \n",
+    "        images, labels = batch\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
     "        out = self(images)                    # Generate predictions\n",
     "        loss = F.cross_entropy(out, labels)   # Calculate loss\n",
     "        acc = accuracy(out, labels)           # Calculate accuracy\n",
@@ -458,7 +460,7 @@
     "            nn.ReLU(),\n",
     "            nn.Linear(1024, 512),\n",
     "            nn.ReLU(),\n",
-    "            nn.Linear(512, 29))\n",
+    "            nn.Linear(512, 59))\n",
     "        \n",
     "    def forward(self, xb):\n",
     "        return self.network(xb)"
