Syntax error fix for VGG16

--- a/Code/ASL/VGG16.ipynb
+++ b/Code/ASL/VGG16.ipynb
@@ -143,7 +143,7 @@
     "    def __init__(self, in_channels=3, num_classes=1000):\n",
     "        super(VGG_net, self).__init__()\n",
     "        self.in_channels = in_channels\n",
-    "        self.conv_layers = create_conv_layers(VGG16)\n",
+    "        self.conv_layers = self.create_conv_layers(VGG16)\n",
     "        \n",
     "        # fully connected linear layers\n",
     "        self.linear_layers = nn.Sequential(\n",
@@ -166,7 +166,7 @@
     "                \n",
     "                layers += [nn.Conv2d(in_channels=in_channels, out_channels=out_channels, kernel_size=(3,3), stride=(1,1), padding=(1,1)), nn.BatchNorm2d(x), nn.ReLU()]\n",
     "                in_channels = x\n",
-    "            elif x == 'M'\n",
+    "            elif x == 'M':\n",
     "                layers += [nn.Maxpool2d(kernel_size=(2,2), stride=(2,2))]\n",
     "                \n",
     "        return nn.Sequential(*layers)\n",
