Updated VGG11 model with new code

--- a/Code/ASL/VGG11.ipynb
+++ b/Code/ASL/VGG11.ipynb
@@ -115,55 +115,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "501733b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "VGG11 = [64, 'M', 128, 'M', 256, 256, 'M', 512, 512, 'M', 512, 512, 'M']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "2eeed78b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class VGG11(ImageClassificationBase):\n",
-    "    def __init__(self, in_channels, num_classes=29):\n",
-    "        super(VGG11, self).__init__()\n",
+    "class VGG_net(ImageClassificationBase):\n",
+    "    def __init__(self, in_channels=3, num_classes=1000):\n",
+    "        super(VGG_net, self).__init__()\n",
     "        self.in_channels = in_channels\n",
-    "        self.num_classes = num_classes\n",
+    "        self.conv_layers = self.create_conv_layers(VGG11)\n",
     "        \n",
-    "        # convolutional layers \n",
-    "        self.conv_layers = nn.Sequential(\n",
-    "            nn.Conv2d(self.in_channels, 64, kernel_size=3, padding=1),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
-    "            nn.Conv2d(64, 128, kernel_size=3, padding=1),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
-    "            nn.Conv2d(128, 256, kernel_size=3, padding=1),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Conv2d(256, 256, kernel_size=3, padding=1),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
-    "            nn.Conv2d(256, 512, kernel_size=3, padding=1),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Conv2d(512, 512, kernel_size=3, padding=1),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
-    "            nn.Conv2d(512, 512, kernel_size=3, padding=1),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Conv2d(512, 512, kernel_size=3, padding=1),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(kernel_size=2, stride=2)\n",
-    "        )\n",
     "        # fully connected linear layers\n",
     "        self.linear_layers = nn.Sequential(\n",
     "            nn.Linear(in_features=512*7*7, out_features=4096),\n",
     "            nn.ReLU(),\n",
-    "            nn.Dropout2d(0.5),\n",
+    "            nn.Dropout(p=0.5),\n",
     "            nn.Linear(in_features=4096, out_features=4096),\n",
     "            nn.ReLU(),\n",
-    "            nn.Dropout2d(0.5),\n",
-    "            nn.Linear(in_features=4096, out_features=self.num_classes)\n",
+    "            nn.Dropout(p=0.5),\n",
+    "            nn.Linear(in_features=4096, out_features=num_classes)\n",
     "        )\n",
+    "        \n",
+    "    def create_conv_layers(self, architecture):\n",
+    "        layers =[]\n",
+    "        in_channels = self.in_channels\n",
+    "        \n",
+    "        for x in architecture:\n",
+    "            if type(x) == int:\n",
+    "                out_channels = x\n",
+    "                \n",
+    "                layers += [nn.Conv2d(in_channels=in_channels, out_channels=out_channels, kernel_size=(3,3), stride=(1,1), padding=(1,1)), nn.BatchNorm2d(x), nn.ReLU()]\n",
+    "                in_channels = x\n",
+    "            elif x == 'M':\n",
+    "                layers += [nn.MaxPool2d(kernel_size=(2,2), stride=(2,2))]\n",
+    "                \n",
+    "        return nn.Sequential(*layers)\n",
+    "    \n",
     "    def forward(self, x):\n",
     "        x = self.conv_layers(x)\n",
     "        # flatten to prepare for the fully connected layers\n",
-    "        x = x.view(x.size(0), -1)\n",
+    "        x = x.reshape(x.shape[0], -1)\n",
     "        x = self.linear_layers(x)\n",
     "        return x"
    ]
@@ -287,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = VGG11(in_channels=3, num_classes=29).to(device)"
+    "model = VGG_net(in_channels=3, num_classes=29).to(device)"
    ]
   },
   {
