Fixed issue so no renaming of images will be required

--- a/Code/Miscellaneous/Image Dataset Creator.ipynb
+++ b/Code/Miscellaneous/Image Dataset Creator.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "7f2e6d2e",
+   "execution_count": 1,
+   "id": "abe77323",
    "metadata": {
     "scrolled": false
    },
@@ -263,6 +263,7 @@
     "success,image = vidcap.read()\n",
     "count = 0\n",
     "num_frames = 0\n",
+    "image_name = video_name[0]\n",
     "\n",
     "fps = vidcap.get(cv2.CAP_PROP_FPS)\n",
     "fps = round(fps)\n",
@@ -276,7 +277,7 @@
     "    \n",
     "    if num_frames%fps == 0:   #Saving a frame every 1s \n",
     "        count += 1\n",
-    "        cv2.imwrite(\"frame%d.jpg\" % count, image)\n",
+    "        cv2.imwrite(\"%s%d.jpg\"% (image_name, count), image)\n",
     "    \n",
     "    if num_frames == fps*10:   #breaking the video after 10s\n",
     "        break\n"
@@ -285,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "650e4f92",
+   "id": "7ca61e60",
    "metadata": {},
    "outputs": [],
    "source": []
